<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" tools:ignore="MissingTranslation">Movie App</string>
    <string name="score_bar" tools:ignore="MissingTranslation">0</string>
    <string name="data" tools:ignore="MissingTranslation">data</string>
    <string name="genre" tools:ignore="MissingTranslation">genre</string>
    <string name="poster" tools:ignore="MissingTranslation">Poster</string>
    <string name="slash" tools:ignore="MissingTranslation">/</string>
    <string name="max_score" tools:ignore="MissingTranslation">10</string>
    <string name="add_to_favourite" tools:ignore="MissingTranslation">Added to Favourite</string>
    <string name="remove_from_favourite" tools:ignore="MissingTranslation">Remove from Favourite</string>

    <string name="movie" translatable="false">Movies</string>
    <string name="tv_show" translatable="false">TV Shows</string>
    <string name="title" translatable="false">Title</string>
    <string name="release" translatable="false">Release</string>
    <string name="score" translatable="false">Score</string>
    <string name="overview" translatable="false">Overview</string>
    <string name="language" translatable="false">Language</string>
    <string name="set_language" translatable="false">en-US</string>
    <string name="data_not_found" translatable="false">Data Not Found!</string>
    <string name="favourite" translatable="false">Favourite</string>
    <string name="search" translatable="false">Search</string>
    <string name="no_favourite" translatable="false">No Favourite</string>
    <string name="setting" translatable="false">Setting</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="banner">Banner</string>

    <string name="action_setting" translatable="false">Settings</string>
    <string name="action_notification" translatable="false">Notifications</string>
    <string name="daily_reminder_key" tools:ignore="MissingTranslation">daily_reminder_key</string>
    <string name="switch_daily_reminder" translatable="false">Turn on/off Daily Reminder</string>
    <string name="daily_reminder" translatable="false">Daily Reminder</string>
    <string name="upcoming_reminder_key" tools:ignore="MissingTranslation">upcoming_reminder_key</string>
    <string name="switch_upcoming_reminder" translatable="false">Turn on/off Upcoming Reminder</string>
    <string name="upcoming_reminder" translatable="false">Upcoming Reminder</string>
    <string name="setting_locale_key" tools:ignore="MissingTranslation">setting_locale_key</string>
    <string name="setting_locale" translatable="false">Setting Locale</string>
    <string name="localization_setting" translatable="false">Change Your Phone Localization</string>
    <string name="daily_reminder_message" translatable="false">Hi, come and see what is the new movie today!</string>
    <string name="upcoming_reminder_message" translatable="false">Hi, %s is release today!</string>

</resources>
