<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        style="@style/ConfigWidthHeight"
        android:layout_margin="5dp">

        <LinearLayout
            style="@style/ConfigWidthHeight"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/ivMovie"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:contentDescription="@string/poster"
                android:src="@drawable/poster_a_start_is_born" />

            <LinearLayout
                style="@style/ConfigWidthHeight"
                android:layout_marginStart="5dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvTitle"
                    style="@style/ConfigWidthHeight"
                    android:textColor="@android:color/black"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    tools:text="Title" />

                <TextView
                    android:id="@+id/tvRelease"
                    style="@style/ConfigWidthHeight"
                    android:gravity="center_vertical"
                    tools:text="Releases" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/tvRating"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@android:color/black"
                        android:textStyle="bold"
                        tools:text="0" />

                    <TextView
                        android:id="@+id/tvSlash"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toEndOf="@+id/tvRating"
                        android:text="@string/slash" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toEndOf="@+id/tvSlash"
                        android:text="@string/max_score" />

                </RelativeLayout>

            </LinearLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>